Refactoring code - added divs to fix CSS

--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Santa.png">
+        <div>
+          <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
+          <img class="card-value" src="Assets/Images/Santa.png">
+        </div>
         <h3>Santa Claus</h3>
       </div>
     </div>
@@ -51,11 +53,13 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Santa.png">
+        <div>
+          <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
+          <img class="card-value" src="Assets/Images/Santa.png">
+        </div>
         <h3>Santa Claus</h3>
       </div>
     </div>
@@ -64,11 +68,13 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Gift.png">
+        <div>
+          <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
+          <img class="card-value" src="Assets/Images/Gift.png">
+        </div>
         <h3>Gift</h3>
       </div>
     </div>
@@ -77,11 +83,13 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Gift.png">
+        <div>
+          <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
+          <img class="card-value" src="Assets/Images/Gift.png">
+        </div>
         <h3>Gift</h3>
       </div>
     </div>
@@ -90,11 +98,13 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Tree.png">
+        <div>
+          <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
+          <img class="card-value" src="Assets/Images/Tree.png">
+        </div>
         <h3>Christmas Tree</h3>
       </div>
     </div>
@@ -103,11 +113,13 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Tree.png">
+        <div>
+          <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
+          <img class="card-value" src="Assets/Images/Tree.png">
+        </div>
         <h3>Christmas Tree</h3>
       </div>
     </div>
@@ -116,11 +128,13 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Reindeer.png">
+        <div>
+          <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
+          <img class="card-value" src="Assets/Images/Reindeer.png">
+        </div>
         <h3>Reindeer</h3>
       </div>
     </div>
@@ -129,11 +143,13 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Reindeer.png">
+        <div>
+          <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
+          <img class="card-value" src="Assets/Images/Reindeer.png">
+        </div>
         <h3>Reindeer</h3>
       </div>
     </div>
@@ -142,11 +158,13 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Snow.jpg">
+        <div>
+          <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
+          <img class="card-value" src="Assets/Images/Snow.jpg">
+        </div>
         <h3>Snowflake</h3>
       </div>
     </div>
@@ -155,11 +173,13 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Snow.jpg">
+        <div>
+          <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
+          <img class="card-value" src="Assets/Images/Snow.jpg">
+        </div>
         <h3>Snowflake</h3>
       </div>
     </div>
@@ -168,11 +188,13 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Elf.png">
+        <div>
+          <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
+          <img class="card-value" src="Assets/Images/Elf.png">
+        </div>
         <h3>Elf</h3>
       </div>
     </div>
@@ -181,11 +203,13 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Elf.png">
+        <div>
+          <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
+          <img class="card-value" src="Assets/Images/Elf.png">
+        </div>
         <h3>Elf</h3>
       </div>
     </div>
@@ -194,11 +218,13 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Socks.jpg">
+        <div>
+          <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
+          <img class="card-value" src="Assets/Images/Socks.jpg">
+        </div>
         <h3>Socks</h3>
       </div>
     </div>
@@ -207,11 +233,13 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Socks.jpg">
+        <div>
+          <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
+          <img class="card-value" src="Assets/Images/Socks.jpg">
+        </div>
         <h3>Socks</h3>
       </div>
     </div>
@@ -220,11 +248,13 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Candycane.png">
+        <div>
+          <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
+          <img class="card-value" src="Assets/Images/Candycane.png">
+        </div>
         <h3>Candy Cane</h3>
       </div>
     </div>
@@ -233,11 +263,13 @@
         <img class="snowflake" src="Assets/Images/Snowflake.png">
       </div>
       <div class="card-front card-face">
-        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Candycane.png">
+        <div>
+          <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+          <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
+          <img class="card-value" src="Assets/Images/Candycane.png">
+        </div>
         <h3>Candy Cane</h3>
       </div>
     </div>
