Cursor and Cards icons and font changed

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="styles.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <script src="script.js" async></script>
-  <title>Jogo da Memória da Tia Mari</title>
+  <title>Bia's Matching Game</title>
 </head>
 <body>
   <div class="title-container">
-    <h1 class="page-title">Jogo da Memoria de Natal da Tia Mari</h1>
+    <h1 class="page-title">Bia Matching Game</h1>
   </div>
   <div class="overlay-text visible">
     Clique para iniciar
@@ -42,8 +45,8 @@
         <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Santa.png">
-        <h3>Santa Claus</h3>
+        <img class="card-value" src="Assets/Images/Watch.png">
+        <h3>Watch</h3>
       </div>
     </div>
     <div class="card">
@@ -55,21 +58,8 @@
         <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Santa.png">
-        <h3>Santa Claus</h3>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-back card-face">
-        <img class="snowflake" src="Assets/Images/Snowflake.png">
-      </div>
-      <div class="card-front card-face">
-        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
-        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Gift.png">
-        <h3>Gift</h3>
+        <img class="card-value" src="Assets/Images/Watch.png">
+        <h3>Watch</h3>
       </div>
     </div>
     <div class="card">
@@ -94,8 +84,8 @@
         <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Tree.png">
-        <h3>Christmas Tree</h3>
+        <img class="card-value" src="Assets/Images/Gift.png">
+        <h3>Gift</h3>
       </div>
     </div>
     <div class="card">
@@ -107,8 +97,21 @@
         <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Tree.png">
-        <h3>Christmas Tree</h3>
+        <img class="card-value" src="Assets/Images/Cards.png">
+        <h3>Cards</h3>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-back card-face">
+        <img class="snowflake" src="Assets/Images/Snowflake.png">
+      </div>
+      <div class="card-front card-face">
+        <img class="snowflakeFront snowflakeFront-top-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
+        <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
+        <img class="card-value" src="Assets/Images/Cards.png">
+        <h3>Cards</h3>
       </div>
     </div>
     <div class="card">
