--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Gift.png">
-        <h3>Gift</h3>
+        <img class="card-value" src="Assets/Images/Podium.png">
+        <h3>Podium</h3>
       </div>
     </div>
     <div class="card">
@@ -84,8 +84,8 @@
         <img class="snowflakeFront snowflakeFront-top-right" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-left" src="Assets/Images/SnowBorder.png">
         <img class="snowflakeFront snowflakeFront-bottom-right" src="Assets/Images/SnowBorder.png">
-        <img class="card-value" src="Assets/Images/Gift.png">
-        <h3>Gift</h3>
+        <img class="card-value" src="Assets/Images/Podium.png">
+        <h3>Podium</h3>
       </div>
     </div>
     <div class="card">
